# ob-analytics

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pre-commit-autoupdate.yml  release.yml
R/: data.py  event_processing.py  order_types.py  visualisation.py
docs/: architecture.md  data-quality.md  extending.md  glossary.md  index.md  migration-to-v1.md  quickstart.md  scale-and-chunking.md
docs/api/: analytics.md  bitstamp.md  cli.md  config.md  data.md  depth.md  event_processing.md  exceptions.md  flow_toxicity.md  gallery.md  lobster.md  matching_engine.md  models.md  order_book.md  order_types.md  pipeline.md  protocols.md  schemas.md  trades.md  visualisation.md  visualization.md
docs/examples/: gallery_examples.py
docs/howto/: cli.md  custom-components.md  flow-toxicity.md  full-control.md  live-capture.md  lobster.md  output.md  validate.md  your-own-data.md
docs/notebooks/: 01_crypto_session.ipynb  02_l3_microstructure.ipynb
docs/plans/: 2026-06-10-implementation-roadmap.md
docs/tutorial/: index.md
docs/tutorial/src/: 00_toy_session.py  01_from_price_to_book.py  02_three_resolutions.py  03_loading_data.py  04_lifecycles.py  05_depth.py  06_flow_toxicity.py  07_visualization_system.py  _docs_theme.py
inst/extdata/: orders.csv
ob_analytics/: __init__.py  __main__.py  _chart_data.py  _demos.py  _matplotlib.py  _needleman_wunsch.py  _plotly.py  _registry.py  _time_utils.py  _utils.py  analytics.py  auxiliary.py  bitstamp.py  cli.py  config.py  data.py  datasets.py  depth.py  event_processing.py  exceptions.py  flow_toxicity.py  gallery.py  lobster.py  matching_engine.py  models.py  needleman_wunsch.py  order_book_reconstruction.py  order_types.py  pipeline.py  protocols.py  queue.py  schemas.py  trades.py  visualisation.py  visualization.py
ob_analytics/_sample_data/: README.md  meta.json  orders.csv  trades.csv
ob_analytics/live/: __init__.py  _base.py  _runner.py  bitstamp.py
ob_analytics/metrics/: __init__.py  _base.py  kyle_lambda.py  ofi.py  vpin.py
ob_analytics/visualization/: __init__.py  _data.py  _matplotlib.py  _model.py  _palette.py  _plotly.py  gallery.py  prepare.py
scripts/: bench_scale.py  bitstamp_demo.py  build_gallery.py  build_tutorial.py  check_links.py  collect_bitstamp_btcusd.py  lobster_demo.py  make_hero.py  parse_bitstamp_log.sh
tests/: conftest.py  test_bitstamp.py  test_chart_data.py  test_classes.py  test_cli.py  test_config.py  test_correctness_batch.py  test_data.py  test_data_registry.py  test_datasets.py  test_depth_engine.py  test_event_match.py  test_exceptions.py  test_feed_quality.py  test_filter_depth.py  test_flow_toxicity.py  test_gallery.py  test_live_protocol.py  test_loader_fill.py  test_lobster.py  test_lobster_hidden_ids.py  test_metrics_protocol.py  test_needleman_wunsch.py  test_order_aggressiveness.py  test_order_book.py  test_order_lifecycles.py  test_order_types.py  test_pipeline.py  test_pipeline_extras.py  test_plot_result.py  test_plotly_backend.py  test_properties_lobster.py  test_protocols.py  test_queue.py  test_registry.py  test_regression_snapshot.py  test_run_context.py  test_sample_data.py  test_schemas.py  test_trade_impacts.py  (+6 more)
