[project]
name = "ob-analytics"
version = "0.1.0"
description = "Limit order book analytics and visualization — reconstruct trades, classify orders, and visualize market microstructure from raw exchange events."
authors = [{ name = "mczielinski", email = "mczielinski@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=1.25.1",
    "pandas>=2.0.3,<3",
    "matplotlib>=3.7.2,<4",
    "seaborn>=0.12.2,<1",
    "pydantic>=2.0,<3",
    "pyarrow>=14.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
interactive = ["plotly>=5.18"]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "coverage[toml]>=7.2.7,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.11.1,<4",
    "ruff>=0.11.10",
    "safety>=2.3.5,<3",
    "mypy>=1.4.1,<2",
    "codecov>=2.1.13,<3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
    "pandas-stubs>=3.0.0.260204",
    "types-seaborn>=0.13.2.20251221",
]

[tool.hatch.build.targets.sdist]
include = ["ob_analytics", "tests"]

[tool.hatch.build.targets.wheel]
include = ["ob_analytics"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["ob_analytics"]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--cov=ob_analytics"
