[project]
name = "ob-analytics"
version = "1.0.0"
description = "Limit order book analytics and visualization — reconstruct trades, classify orders, and visualize market microstructure from raw exchange events."
authors = [{ name = "Mark Zielinski", email = "mczielinski@gmail.com" }]
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3,<4",
    "matplotlib>=3.11.0,<4",
    "seaborn>=0.13,<1",
    "pydantic>=2.13.4,<3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
interactive = ["plotly>=6.8.0"]
live = ["websockets>=12"]

[project.scripts]
ob-analytics = "ob_analytics.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "coverage[toml]>=7.14.1,<8",
    "pytest-cov>=7.1.0,<8",
    "pytest-mock>=3.15.1,<4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
    "safety>=3.8.1,<4",
    "ty>=0.0.44",
    "codecov>=2.1.13,<3",
    "zensical>=0.0.44",
    "mkdocstrings[python]>=1.0.4",
    "pandas-stubs>=3.0.3.260530",
    "types-seaborn>=0.13.2.20260518",
    "plotly>=6.8.0",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.sdist]
include = ["ob_analytics", "tests"]

[tool.hatch.build.targets.wheel]
include = ["ob_analytics"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage is intentionally NOT in addopts: instrumenting the pipeline's hot
# Python loops slows local runs severely; CI passes --cov explicitly.

[tool.coverage.run]
source = ["ob_analytics"]
omit = ["tests/*"]
